QA4SM versioning: display version and links to GitHub on about page, put version and environment file link into netcdf files, separate out version number into separate file.

--- a/validator/templates/validator/about.html
+++ b/validator/templates/validator/about.html
@@ -52,21 +52,17 @@
                 </td>
             </tr>
         </tbody>
-        <tfoot>
-            <tr>
-                <td>
-                    <a href="#">Back to top</a>
-                </td>
-                <td class="align-right">
-                    Application version: {{ app_version }}
-                </td>
-            </tr>
-        </tfoot>
     </table>
 
-    
+    <hr class="featurette-divider">
 
-    
+    <p align="justify">
+        QA4SM is open source software, licensed under an MIT license. <a href="https://github.com/awst-austria/qa4sm" target="_blank">It is available on GitHub.</a>
+        This site uses <a class="font-weight-bold" href="https://github.com/awst-austria/qa4sm/releases/tag/v{{ app_version }}" target="_blank">version {{ app_version }}</a>.
+    </p>
+
+
+    <a href="#">Back to top</a>
 
 </div>
 {% endblock %}
