Fixing QA4SM-350, adding new help text for anomalies

--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -182,7 +182,7 @@
                             <div class="card-header">
                                 <h4 class="my-0 font-weight-normal">Anomalies</h4>
                                 <span class="input-group-text fas fa-question-circle help-icon"
-                                    title="Optionally calculate metrics from anomalies instead of absolute values. For anomalies against climatology you have to specify the time period over which the climatology is computed."></span>
+                                    title="Optionally calculates metrics from anomalies instead of absolute values. First, a climatology is computed using the chosen method and time period (only whole years are used), then the anomalies are calculated based on this. &quot;35 day moving average&quot; means that the climatology is calculated as a moving average of the data; &quot;climatology&quot; means that the average for each day of the year is calculated."></span>
                             </div>
                             <div class="card-body">
 
