Updating screenshots on landing page and removing in development notice

--- a/validator/templates/common/base.html
+++ b/validator/templates/common/base.html
@@ -20,9 +20,7 @@
 
     <div class="navbar navbar-expand-md d-flex flex-md-row p-3 px-md-4 mb-3 border-bottom shadow-sm">
         <div class="d-flex flex-column navbar-brand">
-            <a class="h5 font-weight-normal my-0" style="color: inherit;" href="{% url 'home' %}">QA4SM Validation Service*</a>
-            <a style="font-size: 65%; padding: 0" class="nav-link"
-                href="{% url 'alpha' %}" title="Expect frequent changes and occasional outages.">*This service is still in active development!</a>
+            <a class="h5 font-weight-normal my-0" style="color: inherit;" href="{% url 'home' %}">QA4SM Validation Service</a>
         </div>
 
         <ul class="navbar-nav mr-auto">
