--- a/validator/templates/validator/help.html
+++ b/validator/templates/validator/help.html
@@ -22,6 +22,16 @@
     <h1 class="h3 mb-3 font-weight-normal">Validate Page</h1>
 
     <p>
+        The validate page is subdivided into areas for the various validation parameters. Each area has
+        menu with two icons on the top right. Hover over the question mark to get help for the respective areas. You can
+        use the +/- icon to fold up or fold down the area.
+    </p>
+    <div style="display:flex;">
+        <img class="scaled_image mb-3" src="../../static/images/help/menu_minus.png">
+        <img class="scaled_image mb-3" src="../../static/images/help/menu_plus.png">
+    </div>
+
+    <p>
         <b>Step 1</b> - Choose the data you would like to validate - including the dataset name, the version of the dataset,
         and one of the soil moisture variables provided in the dataset. More details on the supported datasets can be found
         <a href="{% url 'datasets' %}#data">here</a>.
@@ -60,18 +70,40 @@
     <p>
         <b>Step 5 [optional]</b> - Choose the criteria by which you would like to filter the reference data prior to
         running the validation. The filters available depend on the data contained within the chosen dataset. For example,
-        you can filter the ISMN data to include only data points where the soil_moisture_flag is "G" for "good".
+        you can filter the ISMN data to include only data points where the soil_moisture_flag is &quot;G&quot; for &quot;good&quot;.
         Details of the filter options provided for each dataset are given on the supported datasets page
         <a href="{% url 'datasets' %}">here</a>. You can also hover your mouse pointer over the question mark next to a filter
         to get a short explanation.
     </p>
     <p>
-        <b>Step 6</b> - Choose the date range over which the validation should be performed. Accepted formats are: YYYY*MM*DD
-        or DD*MM*YYYY where * can be any of ".", "/" or "-".
+        <b>Step 6 [optional]</b> - If you want to calculate metrics from anomalies instead of absolute values, select the desired method
+        in the &quot;Method&quot; drop-down menu. The options are:
     </p>
-    <img class="scaled_image mb-3" src="../../static/images/help/validate_02.png">
+    <ul>
+        <li>Do not calculate: don't calculate anomalies, use absolute values.</li>
+        <li>35 day moving average: calculate the differences between each measurement value and the 35 day moving average around the value.</li>
+        <li>Climatology: calculate the differences between each measurement value and the climatology value for that day of the year. The climatology
+        is calculated producing an average for each day of the year across the input dataset over the given climatology period. You have to specify
+        which years to use for climatology calculation.</li>
+    </ul>
+    <img class="scaled_image mb-3" src="../../static/images/help/anomalies.png">
     <p>
-        <b>Step 7</b> - Choose how the data (or reference) will be scaled before metrics calculation.
+        <b>Step 7 [optional]</b> - Chose the geographic area over which the validation should be performed. You can either specify a lat/lon bounding
+        box directly or you can select the area on a map by clicking the globe button. The trash button will clear all four bounding
+        box fields.<br/>
+        If you don't specify an area, a global validation will be done.
+    </p>
+    <img class="scaled_image mb-3" src="../../static/images/help/spatial_subsetting.png">
+    <img class="scaled_image mb-3" src="../../static/images/help/map_selection.png">
+    <p>
+        <b>Step 8 [optional]</b> - Choose the date range over which the validation should be performed. Accepted formats are: YYYY*MM*DD
+        or DD*MM*YYYY where * can be any of &quot;.&quot;, &quot;/&quot; or &quot;-&quot;. If you don't provide a period it will be
+        implicitly determined through temporal matching of the data and reference selected. For the time range covered by the various
+        datasets, see the <a href="{% url 'datasets' %}">datasets page</a>.
+    </p>
+    <img class="scaled_image mb-3" src="../../static/images/help/validation_period.png">
+    <p>
+        <b>Step 9</b> - Choose how the data (or reference) will be scaled before metrics calculation.
         The data can be scaled to the reference (default) or vice versa.
         Note that in an intercomparision validation (with multiple datasets), only scaling to reference
         is possible.
@@ -81,17 +113,17 @@
     <img class="scaled_image mb-3" src="../../static/images/help/scaling.png">
 
     <p>
-        <b>Step 8</b> - Optionally name your validation results to make it easier to identify it in
+        <b>Step 10</b> - Optionally name your validation results to make it easier to identify it in
         the list of all your validations.
     </p>
     <img class="scaled_image mb-3" src="../../static/images/help/name_your_validation.png">
 
     <p>
-        <b>Step 9</b> - Run the validation process. You'll be notified via e-mail once it's
+        <b>Step 11</b> - Run the validation process. You'll be notified via e-mail once it's
         finished. You don't need to keep the results window (or even your browser) open for
         the validation to run. The email will contain a link to your results.
     </p>
-    <img class="scaled_image mb-3" src="../../static/images/help/validate_06.png">
+    <img class="scaled_image mb-3" src="../../static/images/help/validate_button.png">
 
     <a id="results_list"></a>
     <h1 id="help3" class="h3 mb-3 font-weight-normal">My Validations - Results List Page</h1>
@@ -128,7 +160,7 @@
     <h1 class="h3 mb-3 font-weight-normal">Validation Results Page</h1>
 
     <p>
-        Once the validation process is finished, you can see short summary of the validation run
+        Once the validation process is finished, you can see a summary of the validation run
         on the results page.
     </p>
     <img class="scaled_image mb-3" src="../../static/images/help/results_overview.png">
