--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -172,8 +172,13 @@
         var metric = $("#id_graph_metric").val()
         var pair = $("#id_graph_pair").val()
         var labels = {{json_metrics|safe}}
-        var overview_url = '{{ val.output_dir_url }}' + 'overview_' + pair + '_' + metric + '.png';
         var overview_label = 'The distribution of ' + labels[metric] + ' for dataset pair ' + pair + ' values plotted on a map.'
+        var overview_url = '';
+        if(metric == 'n_obs') {
+            overview_url = '{{ val.output_dir_url }}' + 'overview_' + metric + '.png';
+        } else {
+            overview_url = '{{ val.output_dir_url }}' + 'overview_' + pair + '_' + metric + '.png';
+        }
         $("#id_overview").attr("src", overview_url);
         $("#id_overview").attr("alt", overview_label);
         $("#id_overview").attr("title", overview_label);
