--- a/validator/templates/widgets/filter_checkbox_option.html
+++ b/validator/templates/widgets/filter_checkbox_option.html
@@ -1,5 +1,8 @@
 <div class="custom-control custom-switch">
-    <input class="custom-control-input" id="{{ widget.attrs.id }}" value="{{ widget.value|stringformat:'s' }}" name="{{ widget.name }}" type="checkbox" {% include "django/forms/widgets/attrs.html" %}>
+    <input class="custom-control-input" id="{{ widget.attrs.id }}" value="{{ widget.value|stringformat:'s' }}" name="{{ widget.name }}"
+        type="checkbox" {% include "django/forms/widgets/attrs.html" %}>
     <label class="custom-control-label" for="{{ widget.attrs.id }}">{{ widget.label }}</label>
+    {% if widget.parameterised  %}<a id="{{ widget.attrs.id }}_link" href="#{{ widget.dialog_name }}" data-toggle="modal" data-target="#{{ widget.dialog_name }}">select...</a>{% endif %}
     <span class="input-group-text fas fa-question-circle help-icon" title="{{ widget.help_text }}"></span>
+    {% if widget.parameterised  %}<input type="hidden" id="{{ widget.attrs.id }}_params" value="default" name="{{ widget.name }}_params">{% endif %}
 </div>
