Fix form bug for parametrised filters and use default values in template now

--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -113,7 +113,7 @@
                                                 <div id="id_{{dc_form.prefix}}-filters" class="indented tabSpecific">
                                                     {{ dc_form.filters }}
                                                 </div>
-                                                <div id="id_{{dc_form.prefix}}-paramfilters" class="indented tabSpecific">
+                                                <div id="id_{{dc_form.prefix}}-parametrised_filters" class="indented tabSpecific">
                                                     {{ dc_form.parametrised_filters }}
                                                 </div>
                                             </div>
@@ -198,7 +198,7 @@
                                         <div id="id_{{ref_dc_form.prefix}}-filters" class="indented">
                                             {{ ref_dc_form.filters }}
                                         </div>
-                                        <div id="id_{{ref_dc_form.prefix}}-paramfilters" class="indented">
+                                        <div id="id_{{ref_dc_form.prefix}}-parametrised_filters" class="indented">
                                             {{ ref_dc_form.parametrised_filters }}
                                         </div>
 
