--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -490,6 +490,9 @@
         {% endwith %}
     </form>
 
+{% endblock %}
+
+{% block dialogs %}
 
     <div class="modal" id="mapDialog" role="dialog" aria-labelledby="mapDialogTitle" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
