--- a/validator/templates/common/base.html
+++ b/validator/templates/common/base.html
@@ -70,6 +70,9 @@
     <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
+    {% block dialogs %}
+    {% endblock %}
+
     {% block javascript %}
     {% endblock %}
 
