Add new ismn stations

--- a/validator/templates/validator/ismn_dialog.html
+++ b/validator/templates/validator/ismn_dialog.html
@@ -189,6 +189,11 @@
                     </div>
 
                     <div class="custom-control custom-switch">
+                        <input class="custom-control-input network" id="id_GROW" value="GROW" type="checkbox" checked name="GROW">
+                        <label class="custom-control-label" for="id_GROW">GROW</label>
+                    </div>
+
+                    <div class="custom-control custom-switch">
                         <input class="custom-control-input network" id="id_GTK" value="GTK" type="checkbox" checked name="GTK">
                         <label class="custom-control-label" for="id_GTK">GTK</label>
                     </div>
@@ -201,6 +206,11 @@
                     <div class="custom-control custom-switch">
                         <input class="custom-control-input network" id="id_HYDROL-NET_PERUGIA" value="HYDROL-NET_PERUGIA" type="checkbox" checked name="HYDROL-NET_PERUGIA">
                         <label class="custom-control-label" for="id_HYDROL-NET_PERUGIA">HYDROL-NET_PERUGIA</label>
+                    </div>
+
+                    <div class="custom-control custom-switch">
+                        <input class="custom-control-input network" id="id_IMA_CAN1" value="IMA_CAN1" type="checkbox" checked name="IMA_CAN1">
+                        <label class="custom-control-label" for="id_IMA_CAN1">IMA_CAN1</label>
                     </div>
 
                     <div class="custom-control custom-switch">
