Fixing ismn network station names - use '-' instead of '_'

--- a/validator/templates/validator/ismn_dialog.html
+++ b/validator/templates/validator/ismn_dialog.html
@@ -59,28 +59,28 @@
                     </div>
 
                     <div class="custom-control custom-switch">
-                        <input class="custom-control-input network" id="id_CTP_SMTMN" value="CTP_SMTMN" type="checkbox" checked name="CTP_SMTMN">
-                        <label class="custom-control-label" for="id_CTP_SMTMN">CTP_SMTMN</label>
+                        <input class="custom-control-input network" id="id_CTP-SMTMN" value="CTP-SMTMN" type="checkbox" checked name="CTP-SMTMN">
+                        <label class="custom-control-label" for="id_CTP-SMTMN">CTP-SMTMN</label>
                     </div>
 
                     <div class="custom-control custom-switch">
-                        <input class="custom-control-input network" id="id_HiWATER_EHWSN" value="HiWATER_EHWSN" type="checkbox" checked name="HiWATER_EHWSN">
-                        <label class="custom-control-label" for="id_HiWATER_EHWSN">HiWATER_EHWSN</label>
+                        <input class="custom-control-input network" id="id_HiWATER-EHWSN" value="HiWATER-EHWSN" type="checkbox" checked name="HiWATER-EHWSN">
+                        <label class="custom-control-label" for="id_HiWATER-EHWSN">HiWATER-EHWSN</label>
                     </div>
 
                     <div class="custom-control custom-switch">
-                        <input class="custom-control-input network" id="id_HSC_SELMACHEON" value="HSC_SELMACHEON" type="checkbox" checked name="HSC_SELMACHEON">
-                        <label class="custom-control-label" for="id_HSC_SELMACHEON">HSC_SELMACHEON</label>
+                        <input class="custom-control-input network" id="id_HSC-SELMACHEON" value="HSC-SELMACHEON" type="checkbox" checked name="HSC-SELMACHEON">
+                        <label class="custom-control-label" for="id_HSC-SELMACHEON">HSC-SELMACHEON</label>
                     </div>
 
                     <div class="custom-control custom-switch">
-                        <input class="custom-control-input network" id="id_HYU_CHEONGMICHEON" value="HYU_CHEONGMICHEON" type="checkbox" checked name="HYU_CHEONGMICHEON">
-                        <label class="custom-control-label" for="id_HYU_CHEONGMICHEON">HYU_CHEONGMICHEON</label>
+                        <input class="custom-control-input network" id="id_HYU-CHEONGMICHEON" value="HYU-CHEONGMICHEON" type="checkbox" checked name="HYU-CHEONGMICHEON">
+                        <label class="custom-control-label" for="id_HYU-CHEONGMICHEON">HYU-CHEONGMICHEON</label>
                     </div>
 
                     <div class="custom-control custom-switch">
-                        <input class="custom-control-input network" id="id_IIT_KANPUR" value="IIT_KANPUR" type="checkbox" checked name="IIT_KANPUR">
-                        <label class="custom-control-label" for="id_IIT_KANPUR">IIT_KANPUR</label>
+                        <input class="custom-control-input network" id="id_IIT-KANPUR" value="IIT-KANPUR" type="checkbox" checked name="IIT-KANPUR">
+                        <label class="custom-control-label" for="id_IIT-KANPUR">IIT-KANPUR</label>
                     </div>
 
                     <div class="custom-control custom-switch">
@@ -164,8 +164,8 @@
                 </div>
                 <div class="collapse ismn_indent" id="id_collapse_europe">
                     <div class="custom-control custom-switch">
-                        <input class="custom-control-input network" id="id_BIEBRZA_S-1" value="BIEBRZA_S-1" type="checkbox" checked name="BIEBRZA_S-1">
-                        <label class="custom-control-label" for="id_BIEBRZA_S-1">BIEBRZA_S-1</label>
+                        <input class="custom-control-input network" id="id_BIEBRZA-S-1" value="BIEBRZA-S-1" type="checkbox" checked name="BIEBRZA-S-1">
+                        <label class="custom-control-label" for="id_BIEBRZA-S-1">BIEBRZA-S-1</label>
                     </div>
 
                     <div class="custom-control custom-switch">
@@ -184,8 +184,8 @@
                     </div>
 
                     <div class="custom-control custom-switch">
-                        <input class="custom-control-input network" id="id_FR_Aqui" value="FR_Aqui" type="checkbox" checked name="FR_Aqui">
-                        <label class="custom-control-label" for="id_FR_Aqui">FR_Aqui</label>
+                        <input class="custom-control-input network" id="id_FR-Aqui" value="FR-Aqui" type="checkbox" checked name="FR-Aqui">
+                        <label class="custom-control-label" for="id_FR-Aqui">FR-Aqui</label>
                     </div>
 
                     <div class="custom-control custom-switch">
@@ -204,13 +204,13 @@
                     </div>
 
                     <div class="custom-control custom-switch">
-                        <input class="custom-control-input network" id="id_HYDROL-NET_PERUGIA" value="HYDROL-NET_PERUGIA" type="checkbox" checked name="HYDROL-NET_PERUGIA">
-                        <label class="custom-control-label" for="id_HYDROL-NET_PERUGIA">HYDROL-NET_PERUGIA</label>
+                        <input class="custom-control-input network" id="id_HYDROL-NET-PERUGIA" value="HYDROL-NET-PERUGIA" type="checkbox" checked name="HYDROL-NET-PERUGIA">
+                        <label class="custom-control-label" for="id_HYDROL-NET-PERUGIA">HYDROL-NET-PERUGIA</label>
                     </div>
 
                     <div class="custom-control custom-switch">
-                        <input class="custom-control-input network" id="id_IMA_CAN1" value="IMA_CAN1" type="checkbox" checked name="IMA_CAN1">
-                        <label class="custom-control-label" for="id_IMA_CAN1">IMA_CAN1</label>
+                        <input class="custom-control-input network" id="id_IMA-CAN1" value="IMA-CAN1" type="checkbox" checked name="IMA-CAN1">
+                        <label class="custom-control-label" for="id_IMA-CAN1">IMA-CAN1</label>
                     </div>
 
                     <div class="custom-control custom-switch">
@@ -244,8 +244,8 @@
                     </div>
 
                     <div class="custom-control custom-switch">
-                        <input class="custom-control-input network" id="id_SWEX_POLAND" value="SWEX_POLAND" type="checkbox" checked name="SWEX_POLAND">
-                        <label class="custom-control-label" for="id_SWEX_POLAND">SWEX_POLAND</label>
+                        <input class="custom-control-input network" id="id_SWEX-POLAND" value="SWEX-POLAND" type="checkbox" checked name="SWEX-POLAND">
+                        <label class="custom-control-label" for="id_SWEX-POLAND">SWEX-POLAND</label>
                     </div>
 
                     <div class="custom-control custom-switch">
@@ -254,8 +254,8 @@
                     </div>
 
                     <div class="custom-control custom-switch">
-                        <input class="custom-control-input network" id="id_UDC_SMOS" value="UDC_SMOS" type="checkbox" checked name="UDC_SMOS">
-                        <label class="custom-control-label" for="id_UDC_SMOS">UDC_SMOS</label>
+                        <input class="custom-control-input network" id="id_UDC-SMOS" value="UDC-SMOS" type="checkbox" checked name="UDC-SMOS">
+                        <label class="custom-control-label" for="id_UDC-SMOS">UDC-SMOS</label>
                     </div>
 
                     <div class="custom-control custom-switch">
@@ -334,8 +334,8 @@
                     </div>
 
                     <div class="custom-control custom-switch">
-                        <input class="custom-control-input network" id="id_PBO_H2O" value="PBO_H2O" type="checkbox" checked name="PBO_H2O">
-                        <label class="custom-control-label" for="id_PBO_H2O">PBO_H2O</label>
+                        <input class="custom-control-input network" id="id_PBO-H2O" value="PBO-H2O" type="checkbox" checked name="PBO-H2O">
+                        <label class="custom-control-label" for="id_PBO-H2O">PBO-H2O</label>
                     </div>
 
                     <div class="custom-control custom-switch">
